--- a/public/index.html
+++ b/public/index.html
@@ -11,10 +11,11 @@
 
     <!-- CSS -->
     <link rel="stylesheet" type="text/css" href="/css/style-login.css" />
+    <link rel="stylesheet" type="text/css" href="/bootstrap/dist/css/bootstrap.min.css" />
 </head>
 
 <body class="message warning">
-    
+    <visio-menu></visio-menu>
     <visio-contenido></visio-contenido>
     
 
@@ -33,8 +34,10 @@
     <script src="/app.js"></script>
     <script src="/config.js"></script>
     <script src="/componentes/componentes.js"></script>
+    <script src="/componentes/menu/menu.js"></script>
     <script src="/estados/estados.js"></script>
     <script src="/estados/login/loginState.js"></script>
+    <script src="/estados/dashboard/dashboardState.js"></script>
     <script src="/servicios/servicios.js"></script>
     <script src="/servicios/login/loginService.js"></script>
 </body>
