Pdf de una factura dentro de un modal

--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,8 @@
     <script src="/angular-ui-router/release/angular-ui-router.min.js"></script>
     <script src="/angular-resource/angular-resource.min.js"></script>
     <script src="/angular-local-storage/dist/angular-local-storage.min.js"></script>
+    <script src="/angular-ui-bootstrap/dist/ui-bootstrap.js"></script>
+    <script src="/angular-ui-bootstrap/dist/ui-bootstrap-tpls.js"></script>
 
     <!-- Application JS -->
     <script src="/app.js"></script>
@@ -40,6 +42,7 @@
     <script src="/estados/dashboard/dashboardState.js"></script>
     <script src="/servicios/servicios.js"></script>
     <script src="/servicios/login/loginService.js"></script>
+    <script src="/servicios/invoices/invoicesService.js"></script>
 </body>
 
 </html>
