--- a/public/componentes/menu/tpl-menu.html
+++ b/public/componentes/menu/tpl-menu.html
@@ -1,15 +1,15 @@
-<nav class="navbar navbar-default navbar-fixed-top" role="navigation" ng-show="$ctrl.mostrarMenu">
+<nav class="navbar navbar-default navbar-fixed-top" role="navigation" ng-show="$ctrl.mostrarMenu()">
 	<div class="navbar-inner">
 		<div class="container">
 			<ul class="nav navbar-nav">
 				<li ng-class="{ active: $ctrl.isActive('total') }">
-					<a ui-sref="total">Totales</a>
+					<a ui-sref="dashboard">Menú 1</a>
 				</li>
 				<li ng-class="{ active: $ctrl.isActive('nuevo') }">
-					<a ui-sref="nuevo">Nuevo</a>
+					<a ui-sref="dashboard">Menú 2</a>
 				</li>
 				<li ng-class="{ active: $ctrl.isActive('lista') }">
-					<a ui-sref="lista">Lista</a>
+					<a ui-sref="dashboard">Menú 3</a>
 				</li>
 			</ul>
 		</div>
