--- a/public/estados/dashboard/dashboard.html
+++ b/public/estados/dashboard/dashboard.html
@@ -1,3 +1,28 @@
-<div class="login-head">
-    <h1>HOLA</h1>
+<div class="submit">
+    <input type="button" id="btnGetpdf" value="Factura" class="loginPanelBtn" ng-click="$ctrl.getPdf();" />
+
+
 </div>
+<!--
+<div>
+    <button type="button" class="btn btn-default" ng-click="$ctrl.openModal()">Open me!</button>
+</div>
+
+<div>
+    <object data="{{$ctrl.content}}" type="application/pdf" style="width:860px;height:1100px;position:absolute;top:240px;left:200px;"></object>
+</div>
+-->
+
+<script type="text/ng-template" id="myModalContent.html">
+    <!--
+    <div class="modal-header">
+        <button class="btn btn-primary" type="button" ng-click="closeModal()">Cerrar</button>
+    </div>
+    -->
+    <div class="modal-body">
+        <object data="{{pdfContent}}" type="application/pdf" style="width:860px;height:1100px;position:relative"></object>
+    </div>
+    <div class="modal-footer">
+        <button class="btn btn-primary" type="button" ng-click="closeModal()">Cerrar</button>
+    </div>
+</script>
