build con mustache para construir el index.html para produccion

--- a/bin/index.html
+++ b/bin/index.html
@@ -11,7 +11,7 @@
 
     <!-- CSS -->
     {{#isProduction}}
-        <link rel="stylesheet" type="text/css" href="/css/min/visioapp.min.css" />
+        <link rel="stylesheet" type="text/css" href="/dist/visioapp.min.css" />
     {{/isProduction}}
     {{^isProduction}}
         <link rel="stylesheet" type="text/css" href="/css/style-login.css" />
