--- a/public/index.html
+++ b/public/index.html
@@ -10,8 +10,7 @@
     <meta name="application-name" content="VisioApp" />
 
     <!-- CSS -->
-    <link rel="stylesheet" type="text/css" href="/css/style-login.css" />
-    <link rel="stylesheet" type="text/css" href="/css/min/visioapp.min.css" />
+        <link rel="stylesheet" type="text/css" href="/dist/visioapp.min.css" />
     <link rel="stylesheet" type="text/css" href="/bootstrap/dist/css/bootstrap.min.css" />
 </head>
 
@@ -22,7 +21,7 @@
 
 
     <!--
-        <object data="{{pc.content}}" type="application/pdf" style="width:860px;height:1100px;position:absolute;top:40px;left:200px;"></object>
+        <object data="" type="application/pdf" style="width:860px;height:1100px;position:absolute;top:40px;left:200px;"></object>
     -->
 
     <!-- JavaScript References -->
