build con mustache para construir el index.html para produccion

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <meta name="application-name" content="VisioApp" />
 
     <!-- CSS -->
-        <link rel="stylesheet" type="text/css" href="/dist/visioapp.min.css" />
+        <link rel="stylesheet" type="text/css" href="/css/style-login.css" />
     <link rel="stylesheet" type="text/css" href="/bootstrap/dist/css/bootstrap.min.css" />
 </head>
 
