--- a/bin/index.html
+++ b/bin/index.html
@@ -14,7 +14,7 @@
         <link rel="stylesheet" type="text/css" href="/dist/visioapp.min.css" />
     {{/isProduction}}
     {{^isProduction}}
-        <link rel="stylesheet" type="text/css" href="/css/style-login.css" />
+        <link rel="stylesheet" type="text/css" href="/css/main.css" />
     {{/isProduction}}
     <link rel="stylesheet" type="text/css" href="/bootstrap/dist/css/bootstrap.min.css" />
 </head>
