--- a/public/index.html
+++ b/public/index.html
@@ -10,11 +10,11 @@
     <meta name="application-name" content="VisioApp" />
 
     <!-- CSS -->
-        <link rel="stylesheet" type="text/css" href="/css/style-login.css" />
+        <link rel="stylesheet" type="text/css" href="/css/main.css" />
     <link rel="stylesheet" type="text/css" href="/bootstrap/dist/css/bootstrap.min.css" />
 </head>
 
-<body class="message warning">
+<body>
     <visio-menu></visio-menu>
     <visio-contenido></visio-contenido>
     
