index para estilos bootstrap

--- a/bin/index.html
+++ b/bin/index.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" type="text/css" href="/bootstrap/dist/css/bootstrap.min.css" />
 </head>
 
-<body class="message warning">
+<body>
     <visio-menu></visio-menu>
     <visio-contenido></visio-contenido>
     
